[package]
authors = [ "Stygian Labs <dd@stygianlabs.com>" ]
edition = "2021"
name    = "stygian-atomic-swap"
version = "0.0.1"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
near-sdk                       = "4.0.0-pre.7"
serde                          = { version = "1.0", features = [ "derive" ] }
serde_json                     = "1.0"

[dev-dependencies]
workspaces = { version = "0.1.1" }
near-units = "0.1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

[profile.release]
codegen-units = 1
debug         = false
lto           = true
opt-level     = "z"
panic         = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace]
members = [  ]
